--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <div id="box">
-    <h1>Teendőlista</h1>
+    <h1>Teendőlista</h1><br>
+    <input type="text" id="new-task" placeholder="Új teendő...">
+  <button id="add-button">Hozzáadás</button>
+
+  <ul id="task-list"></ul>
 </div>
 </body>
 </html>
