--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <button id="add-button">Hozzáadás</button>
 
   <ul id="task-list"></ul>
+  <button  id="hat">Hattér</button>
+  <script src="js.js"></script>
 </div>
 </body>
 </html>
